--- a/partials/header.html
+++ b/partials/header.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/header.css" as="style">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/style.css" as="style">
   <script src="js/iframes.js"></script>
 </head>
 <body>
@@ -20,15 +20,14 @@
         <div class="middle">
           <input type="text" placeholder="search">
         </div>    
-      
+        <div class="end">
+          <img src="../images/icons/instagram-svgrepo-com (1).svg" alt="instagram">  
+          <img src="../images/icons/twitter-svgrepo-com.svg" alt="twitter-x">  
+          <img src="../images/icons/shopping-cart-svgrepo-com (2).svg" alt="">
+        </div>
     </div>  
     <div class="bottom">
-      <div class="top-part">
-        <img src="../images/icons/instagram-svgrepo-com (1).svg" alt="instagram">  
-        <img src="../images/icons/twitter-svgrepo-com.svg" alt="twitter-x">  
-        <img src="../images/icons/shopping-cart-svgrepo-com (2).svg" alt="">
-      </div>
-      <div class="bottom-part">
+            
         <ul>
           <li><a href="">new in</a></li>
           <li><a href="">sale</a></li>
@@ -38,7 +37,7 @@
           <li><a href="">contact</a></li>
         </ul>
      
-      </div>
+      
          </div>
         </nav>
   </object>
