--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   --secondary-color: rgb(128, 6, 6);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .auto-height-iframe  {
   border: none;
   width: 100%;
@@ -18,4 +23,8 @@ header {
 body {
   background-color: var(--main-color);
   margin: 0;
+}
+
+h2 {
+  color: var(--secondary-color);
 }
