--- a/css/header.css
+++ b/css/header.css
@@ -1,24 +1,27 @@
 * {
   margin: 0;
   padding: 0;
+  
 }
 
-nav{
-  background-color: yellowgreen;
-}
+nav {
+  width: 100%;
+  height: auto;
+ 
+ }
+
 
 
 img {
   width: 1rem;
-  padding: 0;
-  margin: 0;
-  border: 1px solid red;
+  
 }
 
 .top {
   display: flex;
   justify-content: space-between;
-  border: 1px solid blue;
+ 
+  
 }
 
 .start,
@@ -42,5 +45,15 @@ img {
 
 .bottom li a {
   text-decoration: none;
+  color: white;
+}
+
+input[type="text"] {
+  background: rgba(255, 255, 255, 0.947);
+  border: none;
+  padding: 0.7rem;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.295);
+  
+  border-radius: 1.4rem;
 }
 
