--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,94 @@
-#hero-section {
-  width: 100%;
-  height: auto;
-  position: relative;
+
+
+body {
+  background-color: rgb(21, 20, 20);
+  
 }
 
+#hero-section {
+  width: 90%;
+  position: relative;
+  z-index: 3;
+  margin-top: 1rem;
+  
+ }
+
+
+
 .banner-pic {
-  width: 100%;
-  filter: brightness(0.4);
+  width: 70%;
+  filter: brightness(0.5);
+  position: relative;
+  transform: translateX(-10%);
 }
 
 .moto {
-  display: block;
-  width: 60%;
-  position: absolute;
-  font-size: 5rem;
-  color: rgba(255, 255, 255, 0.6);
-  top: 5rem;
-  left: 5rem;
-  z-index: 1;
+  font-size: 2.5rem;
 }
 
+.shop-now {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 50%;
+  position: absolute;
+  font-size: 3rem;
+  color: rgba(255, 255, 255, 0.6);
+  top: 5rem;
+  right: 0;
+  z-index: 2;
+  width: 40%;
+  text-align: justify;
+}
+
+.buy-here {
+  font-size: 1rem;
+  
+}
+
+.hero-btns {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  
+  
+}
+
+.hero-btns button {
+  padding: 1rem 2.2rem;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  border: none;
+  border-radius: 0.2rem;
+}
+
+.hero-btns button:first-of-type {
+  
+  background: none;
+  color: white;
+  border: solid 1px white;
+}
+
+.hero-btns button:nth-of-type(2) {
+  background-color: rgb(81, 61, 8);
+  color: white;
+}
+
+.graphic {
+  display: block;
+  width: 45%;
+  height: 80%;
+  border-radius: 2rem 7rem 5rem 14rem;
+  position: absolute;
+  font-size: 3rem;
+  color: rgba(255, 255, 255, 0.6);
+  top: 5rem;
+  left: 2rem;
+  background-color: rgb(81, 61, 8);
+  background-size: cover;
+  z-index: -1;
+}
 #popular {
   width: 100%;
   height: auto;
@@ -29,5 +98,44 @@
 
 #popular iframe {
   max-width: 220px;
+  
 }
+
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  opacity: 0.9;
+  border-radius: 2rem;
+  background-color: rgb(21, 20, 20);
+}
+
+.best-sellers {
+  width: 100%;
+  display: flex;
+}
+
+.product {
+  width: 100%;
+}
+
+.product-card {
+  width: calc(100%/3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  background-color: aqua;
+  gap: 0.3rem;
+  border-radius: 10px;
+  z-index: -1;
+  
+}
+
+
+
+
+
+
 
