--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,10 @@
 
 
-body {
-  background-color: rgb(21, 20, 20);
-  
-}
 
 #hero-section {
   width: 90%;
   position: relative;
-  z-index: 3;
+  z-index: 0;
   margin-top: 1rem;
   
  }
@@ -56,7 +52,7 @@ body {
 }
 
 .hero-btns button {
-  padding: 1rem 2.2rem;
+  padding: 1rem 1.5rem;
   text-transform: uppercase;
   font-size: 0.8rem;
   border: none;
@@ -85,7 +81,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
   top: 5rem;
   left: 2rem;
-  background-color: rgb(81, 61, 8);
+  background-color: var(--secondary-color);
   background-size: cover;
   z-index: -1;
 }
@@ -102,12 +98,7 @@ body {
 }
 
 header {
-  position: fixed;
   width: 100%;
-  z-index: 1;
-  opacity: 0.9;
-  border-radius: 2rem;
-  background-color: rgb(21, 20, 20);
 }
 
 .best-sellers {
