--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,21 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+
 :root {
   --main-color: rgb(11, 11, 11);
-  --secondary-color: rgb(128, 6, 6);
+  --secondary-color: rgb(81, 61, 8);
+  --terciary-color: rgb(38, 38, 38);
+  --forth-color: rgb(255, 255, 255);
 }
 
 * {
   margin: 0;
   padding: 0;
+}
+
+
+body {
+  background-color: rgb(21, 20, 20);
+  
 }
 
 .auto-height-iframe  {
@@ -14,4 +24,6 @@
   margin: 0;
   
 }
+
+
 
