--- a/partials/header.html
+++ b/partials/header.html
@@ -10,36 +10,63 @@
 <body>
   <object>
     <nav>
-    <div class="top">
-      <div class="start">
-        <img src="../images/icons/email-svgrepo-com.svg" alt="mail">
-        <img src="../images/icons/phone-call-svgrepo-com.svg" alt="phone">       
-        <img src="../images/icons/whatsapp-svgrepo-com.svg" alt="whatsapp">
-      </div>    
-        
-        <div class="middle">
-          <input type="text" placeholder="search">
-        </div>    
-        <div class="end">
-          <img src="../images/icons/instagram-svgrepo-com (1).svg" alt="instagram">  
-          <img src="../images/icons/twitter-svgrepo-com.svg" alt="twitter-x">  
-          <img src="../images/icons/shopping-cart-svgrepo-com (2).svg" alt="">
-        </div>
-    </div>  
-    <div class="bottom">
-            
-        <ul>
-          <li><a href="">new in</a></li>
-          <li><a href="">sale</a></li>
-          <li><a href="">categorires</a></li>
-          <li><a href="">about us</a></li>
-          <li><a href="">blog</a></li>
-          <li><a href="">contact</a></li>
-        </ul>
-     
-      
-         </div>
-        </nav>
+      <section class="top">
+        <article class="start">
+          <ul>
+            <li><a href="">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              metrojewel-customers@gmail.com
+            </a></li>
+            <li><a href="">
+              <i class="fa fa-phone" aria-hidden="true"></i>+3859120289301
+            </a></li>
+            <li><a href="">
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>
+              +3859120289301
+            </a></li>
+          </ul>
+        </article>
+        <article class="end">
+          <ul>
+            <li>ENG<i class="fa fa-long-arrow-down" aria-hidden="true"></i>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="bottom">
+        <article class="left">
+          <article class="logo">
+            <a href="../index.html" target="">MetroJewel</a>
+          </article>
+        </article>
+        <article class="right">
+          <article class="bottom-left">
+            <ul>
+              <li><a href=""></a>Home</li>
+              <li><a href=""></a>New in</li>
+              <li><a href=""></a>Products</li>
+              <li><a href=""></a>about</li>
+              <li><a href=""></a>contact</li>
+            </ul>
+          </article>
+          <article class="bottom-middle">
+            <input type="text" placeholder="SEARCH">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </article>
+          <article class="bottom-right">
+            <ul>
+              <li><a href=""><i class="fa fa-user" aria-hidden="true"></i>
+              </a></li>
+              <li><a href=""><i class="fa fa-heart" aria-hidden="true"></i>
+              </a></li>
+              <li><a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+              </a></li>
+            </ul>
+          </article>
+        </article>
+       
+      </section>
+    </nav>
   </object>
 </body>
 </html>
