--- a/partials/header.html
+++ b/partials/header.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/style.css" as="style">
-  <script src="js/iframes.js"></script>
 </head>
 <body>
   <object>
@@ -35,18 +34,17 @@
       </section>
       <section class="bottom">
         <article class="left">
-          <article class="logo">
-            <a href="../index.html" target="">MetroJewel</a>
+          <a href="../index.html" target=""><article class="logo">Metro<span>Jewel</span></article></a>
           </article>
         </article>
         <article class="right">
           <article class="bottom-left">
             <ul>
-              <li><a href=""></a>Home</li>
-              <li><a href=""></a>New in</li>
-              <li><a href=""></a>Products</li>
-              <li><a href=""></a>about</li>
-              <li><a href=""></a>contact</li>
+              <li><a href="">Home</a></li>
+              <li><a href="">New in!</a></li>
+              <li><a href="">Products</a></li>
+              <li><a href="">about</a></li>
+              <li><a href="">contact</a></li>
             </ul>
           </article>
           <article class="bottom-middle">
