--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,17 @@
-
-
-
 #hero-section {
-  width: 90%;
-  position: relative;
-  z-index: 0;
-  margin-top: 1rem;
-  
+  width: 100%;
+  display: flex;
+  justify-content: center;
  }
 
-
+ .hero-section-content {
+  width: 60%;
+  position: relative;
+ }
 
 .banner-pic {
-  width: 70%;
+  width: 100%;
   filter: brightness(0.5);
-  position: relative;
-  transform: translateX(-10%);
 }
 
 .moto {
@@ -23,19 +19,14 @@
 }
 
 .shop-now {
-  margin-top: 1.5rem;
   display: flex;
   flex-direction: column;
+  text-align: justify;
   gap: 2rem;
-  width: 50%;
-  position: absolute;
   font-size: 3rem;
   color: rgba(255, 255, 255, 0.6);
-  top: 5rem;
-  right: 0;
-  z-index: 2;
   width: 40%;
-  text-align: justify;
+  padding: 3rem;
 }
 
 .buy-here {
@@ -72,15 +63,14 @@
 }
 
 .graphic {
-  display: block;
-  width: 45%;
-  height: 80%;
+  width: 70%;
+  height: 85%;
   border-radius: 2rem 7rem 5rem 14rem;
   position: absolute;
   font-size: 3rem;
   color: rgba(255, 255, 255, 0.6);
-  top: 5rem;
-  left: 2rem;
+  top: 2rem;
+  left: 5rem;
   background-color: var(--secondary-color);
   background-size: cover;
   z-index: -1;
