--- a/partials/footer.html
+++ b/partials/footer.html
@@ -10,11 +10,9 @@
 <body>
   <object>
     <footer>
-      <div class="newsletter">
-        Subscribe to our newslatter to get new aditions first
-      </div>
       <div  class="wrapper">
-      <img src="../images/graphics/logo.svg" alt="logo_grubic_desing">
+        <a href="../index.html" target=""><article class="logo">Metro<span>Jewel</span></article></a>
+      
       <div class="footer-content">
         <div class="column navigation">
           <ul>
@@ -53,17 +51,11 @@
 
           </ul>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11121.064972504304!2d15.9979927!3d45.8259517!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fd8334185b%3A0x53438919b5a274a0!2sGrubic%20design!5e0!3m2!1sen!2shr!4v1704654382393!5m2!1sen!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <div class="info">
-      <ul>
-        <li><a href="">copyright gribić design d.o.o.</a></li>
-        <li><a href="">OIB</a></li>
-        <li><a href="">adresa</a></li>
-        <li><a href="">tel</a></li>
-        <li><a href="">email</a></li>
-      </ul>
+      <div class="company">&copy;metro jewel d.o.o.</div>
+      <div class="webshop">webshop made by</div>
     </div>
     </footer>
   </object>
