footer done, still to do lists

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -11,21 +11,25 @@
   <object>
     <footer>
       <div  class="wrapper">
-        <a href="../index.html" target=""><article class="logo">Metro<span>Jewel</span></article></a>
-      
-      <div class="footer-content">
+        <div class="logo-wrapper">
+          <a href="../index.html" target=""><article class="logo">MetroJewel</span></article></a>
+          <p class="footer-moto">Urban Pulse, Graceful Living</p>
+        </div>
+        <div class="footer-content">
         <div class="column navigation">
           <ul>
+            <li class="list-title">Navigation</li>
             <li><a href="">new in</a></li>
             <li><a href="">sale</a></li>
             <li><a href="">categories</a></li>
             <li><a href="">about us</a></li>
-            <li><a href="">blog/a></li>
+            <li><a href="">blog</a></li>
             <li><a href="">contact</a></li>
           </ul>
         </div>
         <div class="column costumer_care">
           <ul>
+            <li class="list-title">user care</li>
             <li><a href="">FAQs</a></li>
             <li><a href="">customer support</a></li>
             <li><a href="">terms of service</a></li>
@@ -36,14 +40,15 @@
         </div>
         <div class="column my_account">
           <ul>
-            <li><a href="">login</a></li>
-            <li><a href="">signup</a></li>
+            <li class="list-title">user page</li>
+            <li><a href="">profile</a></li>
             <li><a href="">wishlist</a></li>
             <li><a href="">cart</a></li>
           </ul>
         </div>
         <div class="column top_searches">
           <ul>
+            <li class="list-title">best sellers</li>
             <li><a href="">antik prsten</a></li>
             <li><a href="">antik prsten</a></li>
             <li><a href="">antik prsten</a></li>
