--- a/css/footer.css
+++ b/css/footer.css
@@ -5,10 +5,11 @@
 
 footer {
   color: white;
-  background-color: deeppink;
+  background-color: var(--terciary-color);
   width: 100%;
   display: flex;
   flex-direction: column;
+  
 }
 
 footer li {
@@ -17,22 +18,43 @@ footer li {
 
 footer a {
   text-decoration: none;
+  color: white;
+}
+
+.list-title {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+}
+
+.logo-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0.5rem;
+  text-align: center;
 }
 
 .logo {
-  border: 1px solid var(--secondary-color);
-  color: var(--secondary-color);
+  border: 1px solid var(--forth-color);
+  color: var(--forth-color);
   font-weight: bold;
   font-size: 1.5rem;
   padding: 0.4rem;
   border-radius: 0.1rem;
+  margin: auto;
+  width: 70%;
 }
 
+.footer-moto {
+  width: 60%;
+  margin: auto;
+}
 
 .wrapper {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  text-transform: capitalize;
 }
 
 
@@ -43,6 +65,7 @@ footer a {
 
 .column {
   width: 25%;
+  margin: 1rem;
 }
 
 .info {
@@ -54,6 +77,7 @@ footer a {
 .company,
 .webshop {
   width: 100%;
+  margin: 0.3rem;
 }
 
 .webshop {
