--- a/css/header.css
+++ b/css/header.css
@@ -22,7 +22,8 @@ nav {
 
 
 
-.logo {
+nav .logo {
+  width: auto;
   border: 1px solid var(--secondary-color);
   color: var(--secondary-color);
   font-weight: bold;
