--- a/partials/footer.html
+++ b/partials/footer.html
@@ -6,10 +6,20 @@
   <title>Document</title>
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/style.css" as="style">
+  <link rel="stylesheet" href="../css/newsletter.css">
 </head>
 <body>
-  <object>
-    <footer>
+  <object>   
+      <div class="newsletter">
+        <article class="newsletter-left">
+          <p>let's stay in touch</p>
+        <p>Sign up now to get alerts for new product drops and rad promotions</p>
+        </article>
+          <form class="newsletter-right" id="newsletter" action="">
+          <input id="submit" type="text" placeholder="Enter your email adress">
+          <button class="sign-up" type="submit">SignUp</button> 
+        </form>
+      </div>
       <div  class="wrapper">
         <div class="logo-wrapper">
           <a href="../index.html" target=""><article class="logo">MetroJewel</span></article></a>
@@ -61,7 +71,6 @@
       <div class="company">&copy;metro jewel d.o.o.</div>
       <div class="webshop">webshop made by</div>
     </div>
-    </footer>
   </object>
 </body>
 </html>
