--- a/css/main.css
+++ b/css/main.css
@@ -144,10 +144,16 @@ header {
 .new-in {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   background-color: var(--terciary-color);
 }
 
-
+.newsletter {
+  width: 100%;
+  
+}
 
 
 
