--- a/css/productCard.css
+++ b/css/productCard.css
@@ -7,7 +7,7 @@ h2 {
 }
 
 .product-card {
-  width: calc(100%/3);
+  width: 45%;
   margin: 1rem;
   background-color: var(--forth-color);
   box-shadow: 0 0 1.2rem black;
