--- a/partials/header.html
+++ b/partials/header.html
@@ -17,9 +17,9 @@
         <article class="right">
           <article class="bottom-left">
             <ul>
-              <li><a href="">Home</a></li>
+              <li><a href="../index.html" target="_parent">Home</a></li>
               <li><a href="">New in!</a></li>
-              <li><a href="">Products</a></li>
+              <li><a href="../shop.html" target="_parent">Products</a></li>
               <li><a href="">about</a></li>
               <li><a href="">contact</a></li>
             </ul>
