--- a/css/footer.css
+++ b/css/footer.css
@@ -42,7 +42,7 @@ object a {
   padding: 0.4rem;
   border-radius: 0.1rem;
   margin: auto;
-  width: 70%;
+  width: fit-content;
 }
 
 .footer-moto {
