--- a/partials/header.html
+++ b/partials/header.html
@@ -11,17 +11,17 @@
     <nav>
       <section class="bottom">
         <article class="left">
-          <a href="../index.html" target=""><article class="logo">Metro<span>Jewel</span></article></a>
+          <a href="../index.html" target="_parent"><article class="logo">Metro<span>Jewel</span></article></a>
           </article>
         </article>
         <article class="right">
           <article class="bottom-left">
             <ul>
-              <li><a href="../index.html" target="_parent">Home</a></li>
-              <li><a href="">New in!</a></li>
-              <li><a href="../shop.html" target="_parent">Products</a></li>
-              <li><a href="">about</a></li>
-              <li><a href="">contact</a></li>
+              <li class="page"><a href="../index.html" target="_parent">Home</a></li>
+              <li class="page"><a href="../shop.html" target="_parent">New in!</a></li>
+              <li class="page"><a href="../shop.html" target="_parent">Products</a></li>
+              <li class="page"><a href="">about</a></li>
+              <li class="page"><a href="">contact</a></li>
             </ul>
           </article>
           <article class="bottom-middle">
@@ -36,6 +36,7 @@
               </a></li>
               <li><a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i>
               </a></li>
+              <li class="hamb"><i class="fa fa-bars" aria-hidden="true"></i></li>
             </ul>
           </article>
         </article>
