--- a/css/shop.css
+++ b/css/shop.css
@@ -21,6 +21,7 @@ main {
   width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   background-color: var(--main-color);
   
 }
@@ -29,22 +30,27 @@ main {
 .filter  {
   width: 20%;
   height: auto;
-  background-color: var(--secondary-color);
   color: var(--forth-color);
   margin: 1.65rem 0.5rem;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
+  font-size: 1.5rem;
 }
 
 
 .filter  fieldset {
   border: none;
+  background-color: var(--main-color);
+  border-radius: 1rem;
+  border: 2px solid var(--secondary-color);
+  padding: 1rem;
+  width: 100%;
+  margin-top: 1.2rem;
 }
 
 .filter p {
   margin-bottom: 0.5rem;
   text-transform: capitalize;
 }
+
 .filter form {
   display: flex;
   flex-direction: column;
@@ -52,34 +58,62 @@ main {
 }
 
 .filter legend {
-  background-color: var(--secondary-color);
+ text-transform: uppercase;
+ font-size: 1.1rem;
+ padding: 0.5rem 0.9rem;
+ border-radius: 1rem;
+ background-color: var(--main-color);
+ border: 3px solid var(--secondary-color);
 }
 
 
 
 .slider  {
-  width: 100%;
+  width: 80%;
 }
 
 .products-wrapper {
-  width: 80%;
+  width: 70%;
   height: max-content;
   display: flex;
   flex-direction: column;
+  margin: 2rem;
+ 
+
   
 }
 
 
 .products-title {
-  width: 100%;
+  width: 94%;
+  margin: auto;
   display: flex;
   flex-direction: row;
   height: fit-content;
   justify-content: space-between;
-  
+  text-transform: uppercase;
+  margin-bottom: 2rem;
 }
 
+.sorting button {
+  padding: 0.5rem 0.8rem;
+  text-transform: uppercase;
+  background-color: var(--secondary-color);
+  color: var(--forth-color);
+  border: none;
+  border-radius: 0.2rem; 
+}
 
+.sorting button:hover {
+  box-shadow: 0 0 2px var(--secondary-color);
+  scale: 1.1;
+  cursor: pointer;
+}
+
+.sorting button:active {
+  scale: 0.9;
+  cursor: pointer;
+}
 
 .prod-wrapper {
   width: auto;
@@ -95,6 +129,7 @@ main {
   color: var(--main-color);
   box-shadow: 0 0 5px white;
   font-weight: bold;
+  opacity: 0.9;
 }
 
 .product-img,
@@ -130,9 +165,9 @@ main {
 
 .wishlist-icon {
   position: absolute;
-  font-size: 1.4rem;
-  top: 0.3rem;
-  right: 0.3rem;
+  font-size: 2rem;
+  top: 0.7rem;
+  right: 0.7rem;
 }
 
 .wishlist-icon:hover {
@@ -153,18 +188,40 @@ main {
   margin: auto;
   width: 50%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  gap: 0.3rem;
+  gap: 0.5rem;
   margin-bottom: 1rem;
 }
-.numbering > *{
+.numbering article{
   background-color: var(--secondary-color);
   width: fit-content;
-  padding: 0.3rem;
-  
+  padding: 0.5rem 0.7rem;
+  border-radius: 0.3rem;
+
 }
 
-/* @media only screen  and (max-width: 820px) {
+
+.numbering article:hover:not(.disabled) {
+  scale: 1.2;
+  cursor: pointer;
+  box-shadow: 0 0 2px var(--secondary-color);
+}
+
+.numbering article:active:not(.disabled) {
+  scale: 0.9;
+  cursor: pointer;
+}
+
+.disabled {
+ opacity: 0.6;
+}
+
+
+ @media only screen  and (max-width: 820px) {
+  html {
+    margin: 0;
+  }
   .sort-n-filter-btn {
     display: block;
   }
@@ -173,15 +230,25 @@ main {
     display: none;
   }
 
-  .prod-wrapper {
+  .products-wrapper,
+  .products-list,
+  .sorting{
     width: 100%;
-    margin: 0 1rem;
-    
   }
-  
-  .product {
-    width: 49%;
-  }
-  
-} */
 
+  .numbering {
+    width: 75%;
+  }
+
+  .product {
+    width: 100%;
+  }
+
+  .wishlist-icon {
+    font-size: 4rem;
+    top: 1.5rem;
+    right: 1.5rem;
+  }
+
+  
+} 
