--- a/partials/header.html
+++ b/partials/header.html
@@ -18,7 +18,7 @@
           <article class="bottom-left">
             <ul>
               <li class="page"><a href="../index.html" target="_parent">Home</a></li>
-              <li class="page"><a href="../shop.html" target="_parent">New in!</a></li>
+              <li class="page"><a href="../newIn.html" target="_parent">New in!</a></li>
               <li class="page"><a href="../shop.html" target="_parent">Products</a></li>
               <li class="page"><a href="">about</a></li>
               <li class="page"><a href="">contact</a></li>
