--- a/css/shop.css
+++ b/css/shop.css
@@ -3,10 +3,13 @@
 
 body {
   color: var(--forth-color);
+ 
 }
 
 main {
   position: relative;
+  
+
 }
 
 .filler {
@@ -22,7 +25,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: var(--main-color);
+  background-color: var(--forth-color);
   
 }
 
@@ -30,7 +33,7 @@ main {
 .filter  {
   width: 20%;
   height: auto;
-  color: var(--forth-color);
+  color: var(--main-color);
   margin: 1.65rem 0.5rem;
   font-size: 1.5rem;
 }
@@ -38,7 +41,6 @@ main {
 
 .filter  fieldset {
   border: none;
-  background-color: var(--main-color);
   border-radius: 1rem;
   border: 2px solid var(--secondary-color);
   padding: 1rem;
@@ -62,7 +64,6 @@ main {
  font-size: 1.1rem;
  padding: 0.5rem 0.9rem;
  border-radius: 1rem;
- background-color: var(--main-color);
  border: 3px solid var(--secondary-color);
 }
 
@@ -130,6 +131,8 @@ main {
   box-shadow: 0 0 5px white;
   font-weight: bold;
   opacity: 0.9;
+  border: 2px solid var(--main-color);
+
 }
 
 .product-img,
@@ -217,7 +220,7 @@ main {
  opacity: 0.6;
 }
 
-
+/* 
  @media only screen  and (max-width: 820px) {
   html {
     margin: 0;
@@ -251,4 +254,4 @@ main {
   }
 
   
-} 
+}  */
