--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
- @import url('https://fonts.googleapis.com/css2?family=Fenix&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap'); @import url(dropdown.css);
+@import url(carousel.css);
 
 
 
 :root {
-  --main-color: rgb(32, 30, 30);
+  --main-color: rgb(18, 18, 18);
   --secondary-color: rgb(81, 61, 8);
   --terciary-color: rgb(38, 38, 38);
   --forth-color: rgb(255, 255, 255);
@@ -18,7 +19,7 @@
 
 
 body {
-  background-color: rgb(21, 20, 20);
+  background-color: var(--main-color);
  
 }
 
