--- a/partials/header.html
+++ b/partials/header.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/style.css" as="style">
 </head>
-<body>
-  <object>
     <nav>
       <section class="bottom">
         <article class="left">
-          <a href="../index.html" target="_parent"><article class="logo">Metro<span>Jewel</span></article></a>
+          <a href="../index.html" target="_parent">
+         <article class="logo">Metro<span>Jewel</span></article></a>
           </article>
         </article>
         <article class="right">
@@ -20,8 +19,16 @@
               <li class="page"><a href="../index.html" target="_parent">Home</a></li>
               <li class="page"><a href="../newIn.html" target="_parent">New in!</a></li>
               <li class="page"><a href="../shop.html" target="_parent">Products</a></li>
-              <li class="page"><a href="">about</a></li>
-              <li class="page"><a href="">contact</a></li>
+              <li class="page"><a href="">about</a></li>           
+              <srticle class="dropdown">
+                <li class="page"><a href="">contact</a></li>
+                <article class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </article>
+              </article>
+              
             </ul>
           </article>
           <article class="bottom-middle">
@@ -40,9 +47,7 @@
             </ul>
           </article>
         </article>
-       
       </section>
     </nav>
-  </object>
-</body>
+
 </html>
