--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,8 @@ i {
 nav {
   width: 100%;
   position: relative;
-  
+  background-color: var(--main-color);
+  letter-spacing: 0.2rem;
 }
 
 .bottom {
@@ -36,6 +37,9 @@ nav .logo {
   color: var(--forth-color);
 }
 
+.bottom .left {
+  
+}
 
 .bottom .right  {
 
@@ -55,8 +59,7 @@ nav .logo {
   text-transform: uppercase;
   font-size: 0.95rem;
   color: var(--forth-color);
-  padding: 0.7rem 0.4rem;
-  border-radius: 0.1rem;
+  padding-inline: 1rem;
 }
 
 .bottom-middle {
@@ -65,18 +68,28 @@ nav .logo {
   border-radius: 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex: 1;
   margin: 0 1rem;
+  max-width: 40%;
  
   
 }
 
 
 .bottom-middle input {
-  width: 92%;
   border: none;
-  font-size: 0.6rem;
+  font-size: 1rem;
+  width: 100%;
+  padding: 0.3rem;
 }
+
+.bottom-middle input::placeholder {
+  font-weight: bold;
+  opacity: 0.5;
+  color: var(--main-color);
+}
+
 
 .bottom-middle i {
   color: var(--terciary-color);
@@ -84,6 +97,7 @@ nav .logo {
 
 .bottom-right i{
   font-size: 1.18rem;
+  padding-inline: 0.6rem;
 }
 
 .bottom-right i:hover{
@@ -91,8 +105,10 @@ nav .logo {
   scale: 1.5;
 }
 
-.bottom-left li:hover{
-  background-color: var(--secondary-color);
+.bottom-left a:hover{
+ text-decoration: solid underline var(--secondary-color) 0.15rem;
+ text-underline-offset: 0.5rem;
+
 }
 
 .fa-heart{
@@ -103,12 +119,13 @@ nav .logo {
   margin-right: 1rem;
 }
 
-.bottom-right .hamb { 
+.bottom  .hamb { 
   display: none;
+  
 }
 
-@media only screen  and (max-width: 820px) {
-  .bottom-right .hamb {
+/* @media only screen  and (max-width: 820px) {
+  .bottom  .hamb  {
     display: inline-block;
    
   }
@@ -116,6 +133,34 @@ nav .logo {
     display: none;
   }
   .bottom-middle input {
-    width: 60%;
+    width: 40%;
   }
 }
+ */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  float: left;
+  left: 0;
+  background-color: var(--terciary-color);
+  width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {text-decoration: solid underline var(--secondary-color) 0.15rem;}
+
+.dropdown:hover .dropdown-content {display: block;}
