--- a/css/shop.css
+++ b/css/shop.css
@@ -192,7 +192,7 @@ main {
   width: 50%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   gap: 0.5rem;
   margin-bottom: 1rem;
 }
@@ -254,4 +254,4 @@ main {
   }
 
   
-}  */
+}   */
