--- a/css/carousel.css
+++ b/css/carousel.css
@@ -10,13 +10,32 @@
 
 .carousel-slide {
   flex: 1 0 30%;
+  text-align: center;
   scroll-snap-align: center;
   margin: 0.7rem 0.5rem;
   border-radius: 1rem;
 }
 
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--forth-color);
+}
+
+.item > * {
+  padding: 0;
+  margin: 0.3rem;
+}
+
+.item p:first-of-type {
+  width: 80%;
+}
+
+
 .carousel-slide img {
   border-radius: 1rem;
+  width: 90%;
 }
 @media (max-width: 600px) {
   .carousel-slide {
