--- a/css/shop.css
+++ b/css/shop.css
@@ -1,11 +1,5 @@
 @import url(productCard.css);
 
-
-body {
-  color: var(--forth-color);
- 
-}
-
 main {
   position: relative;
   
@@ -151,6 +145,10 @@ main {
   padding: 0.5rem;
 }
 
+.description > * {
+  margin: 0;
+}
+
 .product-category {
   font-size: 0.75rem;
   text-transform: uppercase;
@@ -195,12 +193,14 @@ main {
   justify-content: center;
   gap: 0.5rem;
   margin-bottom: 1rem;
+  color: var(--forth-color);
 }
 .numbering article{
   background-color: var(--secondary-color);
   width: fit-content;
   padding: 0.5rem 0.7rem;
   border-radius: 0.3rem;
+  border: 0.00001rem solid var(--forth-color);
 
 }
 
@@ -220,8 +220,10 @@ main {
  opacity: 0.6;
 }
 
-/* 
- @media only screen  and (max-width: 820px) {
+.recomended {
+  background-color: var(--forth-color);
+}
+ /* @media only screen  and (max-width: 820px) {
   html {
     margin: 0;
   }
