--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Italiana;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -33,3 +33,10 @@ body {
 
 
 
+h2 {
+  font-size: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--forth-color);
+  padding: 2rem;
+}
