--- a/css/carousel.css
+++ b/css/carousel.css
@@ -2,6 +2,7 @@
   display: flex;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
+  background-color: var(--forth-color);
 }
 
 .carousel-container::-webkit-scrollbar {
@@ -13,14 +14,17 @@
   text-align: center;
   scroll-snap-align: center;
   margin: 0.7rem 0.5rem;
-  border-radius: 1rem;
+  padding-bottom: 1rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--forth-color);
+  color: var(--main-color);
+  font-weight: bold;
+  color: var(--secondary-color);
 }
 
 .item > * {
@@ -30,6 +34,7 @@
 
 .item p:first-of-type {
   width: 80%;
+  color: var(--terciary-color);
 }
 
 
