--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,7 @@ nav .logo {
   font-weight: bold;
   font-size: 1rem;
   border-radius: 0.1rem;
+  padding: 0.8rem 0.4rem;
 }
 
 .logo span {
@@ -141,30 +142,3 @@ nav .logo {
   }
 }
 
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  float: left;
-  left: 0;
-  background-color: var(--terciary-color);
-  width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {text-decoration: solid underline var(--secondary-color) 0.15rem;}
-
-.dropdown:hover .dropdown-content {display: block;}
