--- a/css/main.css
+++ b/css/main.css
@@ -45,112 +45,34 @@ header {
   padding: 0.2rem;
 }
 
-
 #hero-section {
-  width: 100%;
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
- }
-
- .hero-section-content {
-  width: 40%;
   position: relative;
-  
- }
-
-.banner-pic {
-  width: auto;
-  height: calc(100vh - 77px);
-  filter: brightness(0.5);
-  animation: slider infinite 2s;
-}
-
-
-
-.moto {
-  font-size: 4.5rem;
-  text-align: left;
-  color: var(--secondary-color);
-  font-weight: bold;
-}
-
-.shop-now {
-  text-align: justify;
-  font-size: 3rem;
-  color: rgba(255, 255, 255, 0.6);
-  width: 40%;
-}
-
-.shop-now-wrapper {
-  width: 75%;
   display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  margin: 5rem 0 0 0;
+  height: 100%;
+}
+#hero-section img {
+  filter: brightness(0.4);
 }
 
-.buy-here {
-  font-size: 1.5rem;
-  
-}
-
-.hero-btns {
-  display: flex;
-  justify-content: end;
-  gap: 2rem;
-  z-index: 1;
-}
-
-.hero-btns button {
-  padding: 1rem 1.5rem;
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  border: none;
-  border-radius: 0.2rem;
-  font-weight: bold;
-  letter-spacing: 0.2rem;
-}
-
-.hero-btns button:first-of-type {
-  background: var(--main-color);
-  color: white;
-  border: solid 1px white;
-}
-
-.hero-btns button:nth-of-type(2) {
-  background-color: rgb(81, 61, 8);
-  color: white;
-}
-
-.graphic {
-  width: 65%;
-  height: 85%;
-  border-radius: 2rem 50% 5rem 50%;
+.banner {
   position: absolute;
-  font-size: 3rem;
-  color: rgba(255, 255, 255, 0.6);
-  top: 4rem;
-  left: 10rem;
-  background-color: var(--secondary-color);
-  background-size: cover;
-  z-index: -1;
+  margin: 0 auto;
+  top: 10%;
+  left: 25%;
+  width: 50%;
+  color: var(--forth-color);
+  text-shadow:  0 0 6px var(--forth-color);
+  font-size: 7rem;
+  text-align: center;
+  
 }
 
-.discount {
-  color: var(--forth-color);
-  padding: 5rem;
-  font-size: 2rem;
-  text-align: center;
-  word-spacing: 0.8rem;
-  position: relative;
-  background-color: var(--secondary-color);
-}
+
 
 .new-in {
   width: 100%;
-  
+  margin-bottom: 1rem;
+ 
 }
 
 
@@ -159,9 +81,58 @@ header {
   
 }
 
+.categories {
+  color: white;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.categories > article {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: brightness(0.7);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.necklaces, .bracelets, .rings, .earings {
+  width: 50%;
+}
+
+.necklaces {
+    background-image: url(../images/graphics/category-necklace.jpg);
+  
+}
+
+.bracelets {
+  background-image: url(../images/graphics/category-brcalet.webp);
+}
+
+.rings {
+  background-image: url(../images/graphics/category-ringjpg.avif);
+}
+.earings {
+    background-image: url(../images/graphics/category-earing.jpg);
+  }
+
+.men {
+  width: 100%;
+  background-image: url(../images/graphics/category-men.webp);
+}
 
 
-
-
-
+.overlay {
+  position: absolute;
+  font-weight: bold;
+  font-size: 2.5rem;
+  margin: auto;
+  border: 2px solid var(--forth-color);
+  padding: 1rem;
+  text-shadow: 0 0 10px var(--main-color);
+}
 
