--- a/css/shop.css
+++ b/css/shop.css
@@ -36,7 +36,7 @@ main {
 .filter  fieldset {
   border: none;
   border-radius: 1rem;
-  border: 2px solid var(--secondary-color);
+  border: 2px solid var(--main-color);
   padding: 1rem;
   width: 100%;
   margin-top: 1.2rem;
@@ -58,7 +58,7 @@ main {
  font-size: 1.1rem;
  padding: 0.5rem 0.9rem;
  border-radius: 1rem;
- border: 3px solid var(--secondary-color);
+ border: 3px solid var(--main-color);
 }
 
 
@@ -223,7 +223,7 @@ main {
 .recomended {
   background-color: var(--forth-color);
 }
- /* @media only screen  and (max-width: 820px) {
+ @media only screen  and (max-width: 820px) {
   html {
     margin: 0;
   }
@@ -256,4 +256,4 @@ main {
   }
 
   
-}   */
+}  
