--- a/partials/header.html
+++ b/partials/header.html
@@ -27,7 +27,7 @@
             </ul>
           </article>
           <article class="bottom-middle">
-            <input type="text" placeholder="SEARCH">
+            <input class="search-input" type="text" placeholder="SEARCH">
             <i class="fa fa-search" aria-hidden="true"></i>
           </article>
           <article class="bottom-right">
