--- a/css/carousel.css
+++ b/css/carousel.css
@@ -15,7 +15,8 @@
   scroll-snap-align: center;
   margin: 0.7rem 0.5rem;
   padding-bottom: 1rem;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 10px 0px;
+ 
 }
 
 .item {
@@ -30,6 +31,7 @@
 .item > * {
   padding: 0;
   margin: 0.3rem;
+  font-size: 1rem;
 }
 
 .item p:first-of-type {
@@ -45,5 +47,12 @@
 @media (max-width: 600px) {
   .carousel-slide {
     flex: 1 0 90%;
+
+  }
+  .carousel-slide img {
+    width: 50%;
+  }
+  .item > * {
+    font-size: 0.8rem;
   }
 }
