--- a/css/main.css
+++ b/css/main.css
@@ -136,3 +136,18 @@ header {
   text-shadow: 0 0 10px var(--main-color);
 }
 
+
+@media only screen  and (max-width: 820px) {
+  .banner {
+    font-size: 4rem;
+  }
+}
+
+@media only screen  and (max-width: 500px) {
+  .banner {
+    font-size: 2rem;
+  }
+  .overlay {
+    font-size: 1.5rem;
+  }
+}
