--- a/css/popup.css
+++ b/css/popup.css
@@ -46,3 +46,45 @@ p, button, input {
 .subscribe > * {
   padding: 0.8rem;
 }
+
+
+
+
+@media only screen  and (max-width: 820px) {
+  h3 {
+    font-size: 3rem;
+  }
+
+  .popup-content {
+    width: 60%;
+  }
+
+  p, button, input {
+    font-size: 0.8rem;
+    margin: 1rem;
+  }
+}
+
+@media only screen  and (max-width: 420px) {
+  #container {
+   height: 35vh;
+  }
+
+  h3 {
+    font-size: 1.7rem;
+  }
+
+  .popup-content {
+    width: 60%;
+  }
+
+  p, button, input, .terms {
+    font-size: 0.5rem;
+    margin: 0.25rem;
+  }
+
+  .subscribe > * {
+    padding: 0.2rem;
+  }
+}
+
