--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,10 @@ h2 {
   padding: 1.5rem;
   text-transform: uppercase;
 }
+
+
+@media only screen  and (max-width: 820px) {
+  h2 {
+    font-size: 1.5rem;
+  }
+}
