--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');@import url(dropdown.css);
 @import url(carousel.css);
 @import url(popup.css);
-
+@import url(header.css);
+@import url(footer.css);
 
 
 :root {
