--- a/partials/header.html
+++ b/partials/header.html
@@ -9,7 +9,7 @@
     <nav>
       <section class="bottom">
         <article class="left">
-          <a href="../index.html" target="_parent">
+          <a href="index.html" target="_parent">
          <article class="logo">Metro<span>Jewel</span></article></a>
           </article>
         </article>
